CSS to properly align grid headers with grid row contents as in issue #377

--- a/src/components/common/AddressLink/styles.module.scss
+++ b/src/components/common/AddressLink/styles.module.scss
@@ -9,10 +9,10 @@
   color: rgb(45, 45, 45);
   text-decoration: none;
   display: flex;
-  justify-content: flex-start;
+  justify-content: center;
   align-items: center;
-  margin-right: 8vw;
   flex-direction: row;
+  width: auto;
 
   &:hover {
     color: rgb(45, 45, 45);
