--- a/src/components/layout/CoinChange/styles.module.scss
+++ b/src/components/layout/CoinChange/styles.module.scss
@@ -43,6 +43,7 @@
 .currency_name {
   @include flexbox(center, flex-start);
   flex-wrap: wrap;
+  width: auto;
 
   @include tablet {
     flex-wrap: nowrap;
